--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CS-546-A Final Project: Workout Application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node task/test.js",
     "start": "node app.js"
   },
   "repository": {
