--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
     "mongoConfig": {
         "serverUrl": "mongodb://localhost:27017/",
-        "database": "Workout Application"
+        "database": "Workout_Application"
     }
 }
