--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/gcarvellas/WorkoutApplication#readme",
   "dependencies": {
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mongodb": "^4.8.1",
     "uuid": "^8.3.2"
   }
