Created Sanity Test

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/gcarvellas/WorkoutApplication#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongodb": "^4.8.1",
     "uuid": "^8.3.2"
   }
