--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/gcarvellas/WorkoutApplication#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "bcryptjs": "^2.4.3",
+    "handlebars-dateformat": "^1.1.2",
     "mongodb": "^4.8.1",
     "uuid": "^8.3.2"
   }
