--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "handlebars-dateformat": "^1.1.2",
     "mongodb": "^4.8.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xss": "^1.0.14"
   }
 }
