--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "node task/test.js",
-    "start": "node app.js"
+    "start": "node app.js", 
+    "seed": "node task/seed.js"
   },
   "repository": {
     "type": "git",
